--- a/01-courses.qmd
+++ b/01-courses.qmd
@@ -73,6 +73,8 @@ Students admitted to the [Associate Product Manager (APM) Internship](02-capston
 
 ## Senior Year for Majors {.unnumbered}
 
+The senior year is largely self-directed, yeah
+
 ### Fall Sememster {.unnumbered}
 
 - STRAT 421: Strategy Implementation (3.0 credits)
@@ -121,7 +123,7 @@ A list of courses and key questions addressed in each is shown in the table belo
     <tr>
       <th>Course Number</th>
       <th>Title</th>
-      <th>Key Question Addressed by the Class</th>
+      <th>Key Question Addressed in the Class</th>
     </tr>
   </thead>
   <tbody>
@@ -162,6 +164,11 @@ A list of courses and key questions addressed in each is shown in the table belo
     </tr>
     <tr>
       <td>STRAT 490R</td>
+      <td>Corporate Strategy</td>
+      <td>How should a company choose and manage its portfolio of businesses to create long-term value?</td>
+    </tr>
+    <tr>
+      <td>STRAT 490R</td>
       <td>Creating Digital Products with AI: Strategy & Prototyping</td>
       <td>How can I leverage new AI tools to rapidly test and iterate on new digital product ideas? (build with AI-assisted coding)</td>
     </tr>
@@ -169,11 +176,6 @@ A list of courses and key questions addressed in each is shown in the table belo
       <td>STRAT 490R</td>
       <td>Understanding AI: From Foundations to Strategy</td>
       <td>How does AI work under the hood and what can I expect and not expect from it? (explores the math and code)</td>
-    </tr>
-    <tr>
-      <td>STRAT 490R</td>
-      <td>Enterprise Technology Strategy in the Age of AI</td>
-      <td>How can leaders leverage AI to lead responsible digital transformation within their company?</td>
     </tr>
     <tr>
       <td>STRAT 490R</td>
