--- a/06-apply.qmd
+++ b/06-apply.qmd
@@ -8,6 +8,15 @@ editor: visual
 
 Applications due: **Last work day of June before 4:30 p.m**
 
+Factors considered for admission are:
+
+- Pre-req GPA
+- BYU GPA
+- ACT or SAT score
+- Brief written essays
+- Video interview and case question response
+- Personal interactions with program faculty and club leadership
+
 ## Application Tips {.unnumbered}
 
 ### Case preparation {.unnumbered}
