--- a/index.qmd
+++ b/index.qmd
@@ -14,7 +14,29 @@ The Strategic Management program at BYU helps students develop the skills needed
 
 Because of the necessity for both hard and soft skills the Strategy program seeks to attract students with high leadership potential who practice genuine curiosity, work well with others, are analytically rigorous, and driven.
 
-## What we look for in applicants {.unnumbered}
+## What is Strategy? {.unnumbered}
+
+The field of strategy, also called strategic management, is a discipline within business and management studies that focuses on how organizations create, deliver, and capture value to achieve long-term success. It deals with how firms make decisions about their goals, allocate resources, respond to competition, and adapt to changing environments.
+
+The core questions in strategy are:
+
+- In what markets should we compete? (e.g., industries, geographies, customer segments)
+- What is the unique value we will offer? (e.g., lower costs, differentiated product features)
+- What capabilities and resources are necessary for us to be successful? (e.g., specialized skills, brand, culture)
+- How can we sustain our competitive advantage to build a durable business? (e.g., barriers to imitation, network effects)
+
+These are complex, ambiguous, and high-stakes questions requiring the integration of knowledge spanning finance, marketing, operations, economics, and technology. Because of this complexity, the opportunity to major in strategy at the undergraduate level is very rare and almost always reserved for MBA and PhD level education. Indeed, BYU has one of the only Strategic Management undergraduate majors anywhere in the world.
+
+Why do we believe undergraduates at BYU are ready to study strategy when most institutions reserve it for graduate students? Simply put, BYU students are unlike any others. Many have already:
+
+- Served missions that required leadership, cross-cultural communication, and long-term planning
+- Worked in meaningful jobs or started businesses
+- Learned a second language and lived abroad
+- Married and taken on family responsibilities
+
+BYU students are mission-driven individuals who routinely engage with big, life-shaping decisions. This maturity, combined with their intellectual rigor and values-based foundation, equips them to think strategically—grappling with ambiguity, balancing tradeoffs, and solving complex problems.
+
+## What do we look for in applicants? {.unnumbered}
 
 A metaphor for the kind of student that will thrive in the Strategy program is that of a CEO-Janitor.
 
@@ -47,7 +69,7 @@ The program is not the best fit for students who prefer highly scripted environm
 </script>
 ```
 
-## Curriculum  {.unnumbered}
+## What is the curriculum like? {.unnumbered}
 
 The Strategy curriculum is rigorous and covers both hard technical skills and soft people skills in order to give students the skills needed to lead, influence, and solve problems in today's technology driven world.
 
@@ -62,9 +84,11 @@ Through our [courses](01-courses.qmd), students will:
     -   Analyze a real company's strategy and present tailored recommendations to it's leadership
     -   Build a real physical or digital product from scratch (via [Sandbox](https://creators.byu.edu/sandbox/sandbox) or [Crocker Innovation Fellowship)](https://crockerinnovationfellows.com/), or complete a Associate Product Manger (APM) internship with a leading company.
 
-## Career outcomes {.unnumbered}
+## What are my career options? {.unnumbered}
 
-Strategy students graduate with a strong track record of placement in consulting, corporate strategy, and product management roles. The major consistently achieves [**100% placement**](https://byu-my.sharepoint.com/:b:/g/personal/murff_byu_edu/EVe5md0DtNhOrolfnGxg6fQB1F75peFtvGgYqT2rEkYJAg?e=J8Qt0U), with the **highest average starting salary in the Marriott School (\$83,000).**
+Strategy students graduate with a strong track record of placement in management consulting, corporate strategy, and product management roles. Because of the interdisciplinary nature of the degree students also place well in a wide variety of other job types and are also well prepared for entrepreneurship. View our [careers](03-career.qmd#explore-placement-data) page for a list of roles and companies that our graduates have landed in.
+
+The major consistently achieves [**100% placement**](https://byu-my.sharepoint.com/:b:/g/personal/murff_byu_edu/EVe5md0DtNhOrolfnGxg6fQB1F75peFtvGgYqT2rEkYJAg?e=J8Qt0U), with the **highest average starting salary in the Marriott School (\$83,000).**
 
 ![](images/BYUStrategy-Placement-25.png){fig-align="center" width="85%"}
 
