--- a/01-courses.qmd
+++ b/01-courses.qmd
@@ -46,7 +46,7 @@ Students who have not completed ECON 110 or STATS 121 should enroll in these dur
 -   MSB 341: Product Management (3.0 credits) & MSB 342: Product Management Lecture Series (1.0 credit) if planning to apply for the [APM Internship](02-capstone.qmd#associate-product-manager-apm-internship)
 -   ENT 401: Entrepreneurial Innovation (3.0 credits) if planning to apply to [Sandbox](02-capstone.qmd#sandbox) or the [Crocker Innovation Fellowship](02-capstone.qmd#crocker-innovation-fellowship)
 
-Students seeking to do either the Associate Product Manager (APM) Internship or Crocker Innovation Fellowship (read about all three [Product Management capstone experiences](02-capstone.qmd#product-management-experiences)) will **apply for these during Fall semester** 
+Students seeking to do either the Associate Product Manager (APM) Internship or Crocker Innovation Fellowship will **apply for these during Fall semester** 
 
 Students interested in doing the [Sandbox capstone experience](02-capstone.qmd#sandbox) will apply for that during **Winter** semester.
 
